# knuth

./: CMakeLists.txt  conanfile.txt  hist_iterator_dev.cpp  nested_sample_data.cpp  nested_sampling_play.cpp  optbins_examples.cpp
python/: CMakeLists.txt  ns_basictest.py  python_bindings.cpp
src/: gsl_error.cpp  gsl_error.hh  gsl_histogram.cpp  gsl_histogram.hh  gsl_wrap.cpp  gsl_wrap.hh  hist_utils.cpp  hist_utils.hh  nested_sampling.cpp  nested_sampling.hh  optbins.cpp  optbins.hh  util.hh
